--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://pablo-92.github.io/space-tourism-website/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
